crates/aven-check/tests/fixtures/check/invalid/wide-value-into-literal-union.av
text = "waiting"
number = 1

status : @{"waiting", "running"} = text
code : @{0, 1, 2} = number
